# zed-appsrc-webrtc

./: README.md  install.sh
sendrecvzed/: CMakeLists.txt  appdata.cpp  appdata.h  appenum.h  main.cpp  pipeline.cpp  pipeline.h  signaling.cpp  signaling.h
sendrecvzed/media/: recievemedia.h
sendrecvzed/my_webrtc/: my_datachannel.h  my_webrtc.h  negotiate.h
